# CMP-104-FruitMachine

./: .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
VS2019/Project1/: Project1.sln  Project1.vcxproj  Source.cpp
VS2019/Project1/Debug/: Project1.ilk  vc142.idb
VS2019/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VS2019/Project1/PDCurses-3.9/wincon/: pdcurses.lib
output/: FruitMachine
src/: CMakeLists.txt  Take1.cpp  main.cpp
